fix: use InputStream for HuggingFace tokenizer